# slide-ai-backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_presentations.py  0002_create_file_assets.py  0003_create_slides.py  0004_add_presentation_spec.py
app/: main.py
app/assets/: provider.py  routes.py
app/auth/: entities.py  jwt_verifier.py  schemas.py  service.py
app/core/: config.py  exceptions.py  handlers.py  logging.py
app/db/: base.py  dependencies.py  session.py
app/export/: html_exporter.py  html_theme.py  pptx_exporter.py  service.py  strategy.py
app/files/: routes.py  schemas.py  service.py  storage.py
app/generation/: provider.py  schemas.py  service.py  spec.py  spec_editor.py  spec_provider.py
app/models/: __init__.py  file_asset.py  presentation.py  presentation_share.py  presentation_version.py  slide.py  workspace.py
app/presentations/: __init__.py  entities.py  routes.py  schemas.py  service.py  versioning.py
app/providers/: container.py
app/sharing/: password.py  routes.py
tests/: conftest.py  test_assets.py  test_auth_jwt.py  test_auth_provider.py  test_auth_routes.py  test_auth_supabase_provider.py  test_config.py  test_exceptions.py  test_export.py  test_file_repository.py  test_file_routes.py  test_file_service.py  test_generation_routes.py  test_health.py  test_presentation_repository.py  test_presentation_routes.py  test_presentation_service.py  test_repository.py  test_sharing.py  test_spec.py  test_templates.py  test_workspaces.py
(+17 files in other folders)
